--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- HEADER -->
   <header class="header">
     <nav class="nav container">
-      <a href="#" class="nav__logo">Alexa</a>
+      <a href="#" class="nav__logo">Mathieu</a>
       <ul class="nav__list">
         <li><a href="#home" class="nav__link">Home</a></li>
         <li><a href="#about" class="nav__link">About</a></li>
@@ -38,9 +38,9 @@
     <!-- HOME -->
     <section class="home section" id="home">
       <div class="home__container container">
-        <h1>Hi, I'm Alexa 👋</h1>
-        <h2>Frontend Developer</h2>
-        <p>High-level experience in web design and development producing quality work.</p>
+        <h1>Hi, I'm Mathieu 👋</h1>
+        <h2>ML Researcher @ CRIION, Freiburg, Germany</h2>
+        <p>High-level experience in ML and DL</p>
         <a href="#contact" class="btn">Contact Me</a>
         <div class="home__img">
           <img src="assets/img/profile.jpg" alt="Profile picture">
