--- a/index.html
+++ b/index.html
@@ -18,17 +18,44 @@
 <body>
 
   <!-- HEADER -->
-  <header class="header">
+  <header class="header" id="header">
     <nav class="nav container">
-      <a href="#" class="nav__logo">Mathieu</a>
-      <ul class="nav__list">
-        <li><a href="#home" class="nav__link">Home</a></li>
-        <li><a href="#about" class="nav__link">About</a></li>
-        <li><a href="#skills" class="nav__link">Skills</a></li>
-        <li><a href="#services" class="nav__link">Services</a></li>
-        <li><a href="#portfolio" class="nav__link">Portfolio</a></li>
-        <li><a href="#contact" class="nav__link">Contact</a></li>
-      </ul>
+      <!-- <a href="#" class="nav__logo">Mathieu</a> -->
+      <div class="nav__menu" id="nav-menu">
+        <ul class="nav__list grid">
+            <li class="nav__item">
+                <a href="#home" class="nav__link">
+                    <i class="uil uil-estate nav__icon"></i> Home
+                </a>
+            </li>
+            <li class="nav__item">
+                <a href="#about" class="nav__link">
+                    <i class="uil uil-user-circle nav__icon"></i> About
+                </a>
+            </li>
+            <li class="nav__item">
+                <a href="#skills" class="nav__link">
+                    <i class="uil uil-file-check-alt nav__icon"></i> Skills
+                </a>
+            </li>
+            <li class="nav__item">
+                <a href="#publications" class="nav__link">
+                    <i class="uil uil-globe nav__icon"></i> Publications
+                </a>
+            </li>
+            <li class="nav__item">
+                <a href="#contact" class="nav__link">
+                    <i class="uil uil-message nav__icon"></i> Contact
+                </a>
+            </li>
+        </ul>
+        <i class="uil uil-times nav__close" id="nav-close"></i>
+      </div>
+      <div class="nav__btns">
+        <div class="nav__toggle" id="nav-toggle">
+            <i class="uil uil-apps"></i>
+        </div>
+      </div>
     </nav>
   </header>
 
@@ -37,14 +64,44 @@
 
     <!-- HOME -->
     <section class="home section" id="home">
-      <div class="home__container container">
-        <h1>Hi, I'm Mathieu 👋</h1>
-        <h2>ML Researcher @ CRIION, Freiburg, Germany</h2>
-        <p>High-level experience in ML and DL</p>
-        <a href="#contact" class="btn">Contact Me</a>
-        <div class="home__img">
-          <img src="assets/img/profile.jpg" alt="Profile picture">
+      <div class="home__container container grid">
+        <div class="home__content grid">
+            <div class="home__social">
+                <a href="https://www.linkedin.com/in/mathieu-isoard-ml" target="_blank" class="home__social-icon">
+                    <i class="uil uil-linkedin-alt"></i>
+            </a>
+            </div>
+            <div class="home__img">
+                <svg class="home__blob" viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <mask id="mask0" mask-type="alpha">
+                        <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 165.547 
+                        130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 129.362C2.45775 
+                        97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 -0.149132 97.9666 
+                        0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
+                    </mask>
+                        <g mask="url(#mask0)">
+                            <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 
+                            165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
+                            129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
+                            -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
+                            <image class="home__blob-img" x="0" y="-30" href="assets/img/about.jpg"/>
+                        </g>
+                    </svg>
+
+                <!-- <img src="assets/img/about.jpg" alt="Profile picture"> -->
+            </div>
         </div>
+            <h1>Hi, I'm Mathieu </h1>
+            <h2>ML Researcher @ CRIION, Freiburg, Germany</h2>
+            <p>High-level experience in ML and DL</p>
+            <a href="#contact" class="btn">Contact Me</a>
+      </div>
+      <div class="home__scroll">
+        <a href="#about" class="home__scroll-button button--flex">
+            <i class="uil uil-mouse-alt home__scroll-mouse"> </i>
+            <span class="home__scroll-name"> Scroll down</span>
+            <i class="uil uil-arrow-down home__scroll-arrow"> </i>
+        </a>
       </div>
     </section>
 
