--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="nav__btns">
         <div class="nav__toggle" id="nav-toggle">
-            <i class="uil uil-apps"></i>
+            <i class="uil uil-bars"></i>
         </div>
       </div>
     </nav>
