--- a/index.html
+++ b/index.html
@@ -66,11 +66,14 @@
     <section class="home section" id="home">
       <div class="home__container container grid">
         <div class="home__content grid">
-            <div>
-            <h1>Hi, I'm Mathieu </h1>
-            <h2>ML Researcher @ CRIION, Freiburg, Germany</h2>
-            <p>High-level experience in ML and DL</p>
-            <a href="#contact" class="btn">Contact Me</a>
+            <div class="home__social">
+                <a href="https://www.linkedin.com/in/mathieu-isoard-ml" target="_blank" class="home__social-icon">
+                    <i class="uil uil-linkedin-alt"></i>
+                </a>
+                <a href="mailto:isoard.mathieu@gmail.com" target="_blank" class="home__social-icon">
+                    <i class="uil uil-at"></i>
+                    <!-- isoard.mathieu@gmail.com -->
+                </a>
             </div>
             <div class="home__img">
                 <svg class="home__blob" viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -91,16 +94,14 @@
 
                 <!-- <img src="assets/img/about.jpg" alt="Profile picture"> -->
             </div>
-            <div class="home__social">
-                <a href="https://www.linkedin.com/in/mathieu-isoard-ml" target="_blank" class="home__social-icon">
-                    <i class="uil uil-linkedin-alt"></i>
-                </a>
-                <a href="mailto:isoard.mathieu@gmail.com" target="_blank" class="home__social-icon">
-                    <i class="uil uil-at"></i>
-                    <!-- isoard.mathieu@gmail.com -->
-                </a>
-            </div>
         </div>
+            <div>
+            <h1>Hi, I'm Mathieu </h1>
+            <h2>ML Researcher @ CRIION, Freiburg, Germany</h2>
+            <p>High-level experience in ML and DL</p>
+            <a href="#contact" class="btn">Contact Me</a>
+            <a href="assets/files/contact.vcf" class="btn" target="_blank"> Export my profile</a>
+            </div>
       </div>
       <div class="home__scroll">
         <a href="#about" class="home__scroll-button button--flex">
