--- a/index.html
+++ b/index.html
@@ -96,11 +96,15 @@
             </div>
         </div>
             <div>
-            <h1>Hi, I'm Mathieu </h1>
+            <h1>Mathieu Isoard</h1>
             <h2>ML Researcher @ CRIION, Freiburg, Germany</h2>
-            <p>High-level experience in ML and DL</p>
-            <a href="#contact" class="btn">Contact Me</a>
-            <a href="assets/files/contact.vcf" class="btn" target="_blank"> Export my profile</a>
+            <p> Machine learning | Data science | Medical imaging | DevOps | Physics  </p>
+            <a href="#contact" class="btn">
+                Contact Me <i class="uil uil-message "></i>
+            </a>
+            <a href="assets/files/contact.vcf" class="btn" target="_blank"> 
+                Export my profile <i class="uil uil-user"></i>
+            </a>
             </div>
       </div>
       <div class="home__scroll">
