--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-    <p>© 2025 Alexa. All rights reserved.</p>
+    <p>© 2025 Mathieu. All rights reserved.</p>
   </footer>
 
   <!-- Swiper JS -->
