--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </a>
             </li>
         </ul>
-        <i class="uil uil-times nav__close" id="nav-close"></i>
+        <!-- <i class="uil uil-times nav__close" id="nav-close"></i> -->
       </div>
       <div class="nav__btns">
         <div class="nav__toggle" id="nav-toggle">
