--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
         <!-- <i class="uil uil-times nav__close" id="nav-close"></i> -->
       </div>
       <div class="nav__btns">
-        <div class="nav__toggle" id="nav-toggle">
-            <i class="uil uil-bars"></i>
+        <div class="nav__toggle">
+            <i class="uil uil-bars" id="nav-toggle"></i>
+            <i class="uil uil-times nav__close" id="nav-close"></i>
         </div>
       </div>
     </nav>
