--- a/index.html
+++ b/index.html
@@ -51,12 +51,10 @@
         </ul>
         <!-- <i class="uil uil-times nav__close" id="nav-close"></i> -->
       </div>
-      <div class="nav__btns">
-        <div class="nav__toggle">
+      <div class="nav__btns nav__toggle">
             <i class="uil uil-bars" id="nav-toggle"></i>
             <i class="uil uil-times nav__close" id="nav-close"></i>
         </div>
-      </div>
     </nav>
   </header>
 
