--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
             </li>
             <li class="nav__item">
                 <a href="#contact" class="nav__link">
-                    <i class="uil uil-message nav__icon"></i> Contact
+                    <i class="uil uil-message nav__icon"></i> Contact!
                 </a>
             </li>
         </ul>
         <!-- <i class="uil uil-times nav__close" id="nav-close"></i> -->
       </div>
-      <div class="nav__btns nav__toggle">
+      <div class="nav__btns">
             <i class="uil uil-bars" id="nav-toggle"></i>
             <i class="uil uil-times nav__close" id="nav-close"></i>
         </div>
