--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="nav__btns">
             <i class="uil uil-bars" id="nav-toggle"></i>
-            <i class="uil uil-times nav__close" id="nav-close"></i>
+            <i class="uil uil-times" id="nav-close"></i>
         </div>
     </nav>
   </header>
