--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </li>
             <li class="nav__item">
                 <a href="#contact" class="nav__link">
-                    <i class="uil uil-message nav__icon"></i> Contact!
+                    <i class="uil uil-message nav__icon"></i> Contact
                 </a>
             </li>
         </ul>
