--- a/index.html
+++ b/index.html
@@ -160,6 +160,50 @@
     <section class="portfolio section" id="portfolio">
         <h2 class="portfolio__container">Portfolio</h2>
         <span class="section__subtitle">Most recent work</span>
+        <div class="portfolio__container container desktop-swiper ">
+            <div class="swiper-wrapper">
+                <!-- PORTFOLIO 1 -->
+                <div class="portfolio__content grid swiper-slide">
+                    <img src="assets/img/header_image.png" alt="" class="portfolio__img">
+                    <div class="portfolio__data">
+                        <h3 class="portfolio__title"> AI in physics</h3>
+                        <p class="portfolio__description">
+                            smth to describe the project
+                        </p>
+                        <a href="#" class="btn button--flex button--small portfolio__button">
+                            Demo
+                            <i class="uil uil-arrow-right btn__icon"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- PORTFOLIO 2 -->
+                <div class="portfolio__content grid swiper-slide">
+                    <img src="assets/img/header_image.png" alt="" class="portfolio__img">
+                    <div class="portfolio__data">
+                        <h3 class="portfolio__title"> AI in physics</h3>
+                        <p class="portfolio__description">
+                            smth to describe the project
+                        </p>
+                        <a href="#" class="btn button--flex button--small portfolio__button">
+                            Demo
+                            <i class="uil uil-arrow-right btn__icon"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            
+             <div class="swiper-button-next">
+                <!-- <i class="uil uil-angle-double-right swiper-portfolio-icon"></i> -->
+            </div>
+            <div class="swiper-button-prev">
+                <!-- <i class="uil uil-angle-double-left swiper-portfolio-icon"></i> -->
+            </div>
+            <div class="swiper-pagination"></div> 
+        </div>
+
+        <!--MOBILE-->
+
         <div class="portfolio__container container mobile-swiper ">
             <div class="swiper-wrapper">
                 <!-- PORTFOLIO 1 -->
