--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                 </a>
             </li>
             <li class="nav__item">
+                <a href="#portfolio" class="nav__link">
+                    <i class="uil uil-suitcase nav__icon"></i> Projects
+                </a>
+            </li>
+            <li class="nav__item">
                 <a href="#publications" class="nav__link">
                     <i class="uil uil-globe nav__icon"></i> Publications
                 </a>
@@ -158,9 +163,9 @@
 
     <!-- PORTFOLIO -->
     <section class="portfolio section" id="portfolio">
-        <h2 class="portfolio__container">Portfolio</h2>
+        <h2 class="portfolio__container">Projects</h2>
         <span class="section__subtitle">Most recent work</span>
-        <div class="portfolio__container container swiper swiper-container ">
+        <div class="portfolio__container container swiper swiper-container">
             <div class="swiper-wrapper">
                 <!-- PORTFOLIO 1 -->
                 <div class="portfolio__content grid swiper-slide">
@@ -202,7 +207,15 @@
             <div class="swiper-pagination"></div> 
         </div>
 
+    </section>
 
+
+        <!-- PUBLICATIONS -->
+    <section class="publication section" id="publications">
+        <h2 class="publications__container">Publications</h2>
+        <div class="portfolio__container container"> 
+        
+        </div>
     </section>
 
     <!-- CONTACT -->
@@ -216,6 +229,13 @@
         <button class="btn" type="submit">Send Message</button>
       </form>
     </section>
+
+
+
+
+
+
+
   </main>
 
   <!-- FOOTER -->
