--- a/index.html
+++ b/index.html
@@ -142,7 +142,14 @@
             <span>20+ Projects</span>
             <span>5+ Companies</span>
           </div>
-          <a href="assets/pdf/resume.pdf" class="btn" target="_blank">Download CV</a>
+          <a href="assets/files/CV_ISOARD.pdf" class="btn" target="_blank">Download CV</a>
+        </div>
+        <div class="home__scroll">
+            <a href="#skills" class="home__scroll-button button--flex">
+                <i class="uil uil-mouse-alt home__scroll-mouse"> </i>
+                <span class="home__scroll-name"> Scroll down</span>
+                <i class="uil uil-arrow-down home__scroll-arrow"> </i>
+            </a>
         </div>
       </div>
     </section>
@@ -158,40 +165,66 @@
           <li>React - 95%</li>
           <li>Backend Development - 70%</li>
         </ul>
+        <div class="home__scroll">
+            <a href="#portfolio" class="home__scroll-button button--flex">
+                <i class="uil uil-mouse-alt home__scroll-mouse"> </i>
+                <span class="home__scroll-name"> Scroll down</span>
+                <i class="uil uil-arrow-down home__scroll-arrow"> </i>
+            </a>
+        </div>
       </div>
+
     </section>
 
     <!-- PORTFOLIO -->
     <section class="portfolio section" id="portfolio">
         <h2 class="portfolio__container">Projects</h2>
-        <span class="section__subtitle">Most recent work</span>
+        <span class="section__subtitle">Most recent works</span>
         <div class="portfolio__container container swiper swiper-container">
             <div class="swiper-wrapper">
+
                 <!-- PORTFOLIO 1 -->
                 <div class="portfolio__content grid swiper-slide">
-                    <img src="assets/img/header_image.png" alt="" class="portfolio__img">
+                    <img src="assets/img/dataset_alignment.png" alt="" class="portfolio__img">
                     <div class="portfolio__data">
-                        <h3 class="portfolio__title"> AI in physics</h3>
+                        <h3 class="portfolio__title"> Aligning medical cell datasets </h3>
                         <p class="portfolio__description">
                             smth to describe the project
                         </p>
                         <a href="#" class="btn button--flex button--small portfolio__button">
-                            Demo
+                            To the paper
                             <i class="uil uil-arrow-right btn__icon"></i>
                         </a>
                     </div>
                 </div>
 
+
                 <!-- PORTFOLIO 2 -->
                 <div class="portfolio__content grid swiper-slide">
-                    <img src="assets/img/header_image.png" alt="" class="portfolio__img">
+                    <img src="assets/img/cmi_competition_kaggle.png" alt="" class="portfolio__img">
                     <div class="portfolio__data">
-                        <h3 class="portfolio__title"> AI in physics</h3>
+                        <h3 class="portfolio__title"> CMI sensors | Kaggle competition</h3>
                         <p class="portfolio__description">
                             smth to describe the project
                         </p>
                         <a href="#" class="btn button--flex button--small portfolio__button">
-                            Demo
+                            <i class="uil uil-github" style="font-size: 1.25rem;"></i> 
+                            &nbsp; Github
+                            <i class="uil uil-arrow-right btn__icon"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- PORTFOLIO 3 -->
+                <div class="portfolio__content grid swiper-slide">
+                    <img src="assets/img/AI_quantum_computing.png" alt="" class="portfolio__img">
+                    <div class="portfolio__data">
+                        <h3 class="portfolio__title"> AI and Quantum Computing</h3>
+                        <p class="portfolio__description">
+                            smth to describe the project
+                        </p>
+                        <a href="#" class="btn button--flex button--small portfolio__button">
+                            To the paper
                             <i class="uil uil-arrow-right btn__icon"></i>
                         </a>
                     </div>
@@ -207,6 +240,13 @@
             <div class="swiper-pagination"></div> 
         </div>
 
+            <div class="home__scroll portfolio">
+            <a href="#publications" class="home__scroll-button button--flex">
+                <i class="uil uil-mouse-alt home__scroll-mouse"> </i>
+                <span class="home__scroll-name"> Scroll down</span>
+                <i class="uil uil-arrow-down home__scroll-arrow"> </i>
+            </a>
+            </div>
     </section>
 
 
@@ -215,6 +255,14 @@
         <h2 class="publications__container">Publications</h2>
         <div class="portfolio__container container"> 
         
+        </div>
+
+        <div class="home__scroll">
+            <a href="#contact" class="home__scroll-button button--flex">
+                <i class="uil uil-mouse-alt home__scroll-mouse"> </i>
+                <span class="home__scroll-name"> Scroll down</span>
+                <i class="uil uil-arrow-down home__scroll-arrow"> </i>
+            </a>
         </div>
     </section>
 
