--- a/index.html
+++ b/index.html
@@ -132,38 +132,56 @@
 
     <!-- ABOUT -->
     <section class="about section" id="about">
+        <h3 class="section__title">About Me</h3>
       <div class="about__container container">
         <!-- <img src="assets/img/about.jpg" alt="About me picture"> -->
-        <h2>About Me</h2>
         <div class="about__content">
-          <p>Web developer with extensive knowledge and years of experience in web technologies, UI/UX design, and delivering quality work.</p>
-          <div class="about__info">
-            <span>08+ Years Experience</span>
-            <span>20+ Projects</span>
-            <span>5+ Companies</span>
-          </div>
-          <a href="assets/files/CV_ISOARD.pdf" class="btn" target="_blank">Download CV</a>
-        </div>
-        <div class="home__scroll">
-            <a href="#skills" class="home__scroll-button button--flex">
+            <p>
+                Former physicist, with a PhD in theoretical physics and applied maths,
+                I'm transitioning towards the world of data. With a long experience 
+                in data analysis, modeling, machine and deep learning, I love to 
+                "give data a voice", to turn them into insights and interpret them.
+            </p>
+            <p>
+            I am convinced that artificial intelligence can help us make tremendous progress and improve human life. 
+            There are already so many domains where AI has demonstrated its incredible potential 
+            — one striking example being AlphaFold, which has revolutionized our understanding of protein structures. 
+            Yet, we are still at the beginning of what AI can achieve.
+            </p>
+            <p>
+            I am particularly fascinated by AI applications in healthcare, 
+            pharmaceutical research, and oncology, where turning data into 
+            meaningful insights can accelerate drug discovery, improve diagnosis, 
+            and enable more personalized treatments. I am currently working at CRIION,
+            a foundation focused on applying AI to cancer research. 
+            </p>
+            <div class="about__end">
+            <a href="assets/files/CV_ISOARD.pdf" class="btn" target="_blank">Download CV</a>
+            <div class="home__scroll">
+             <a href="#skills" class="home__scroll-button button--flex">
                 <i class="uil uil-mouse-alt home__scroll-mouse"> </i>
                 <span class="home__scroll-name"> Scroll down</span>
                 <i class="uil uil-arrow-down home__scroll-arrow"> </i>
             </a>
+            </div>
+            </div>
         </div>
-      </div>
+         <img src="assets/img/header_image_v2.jpg" alt="">
+         </div>
     </section>
 
     <!-- SKILLS -->
     <section class="skills section" id="skills">
+        <h2 class="section__title">Skills</h2>
+
       <div class="skills__container container">
-        <h2>Skills</h2>
         <ul>
-          <li>HTML - 90%</li>
-          <li>CSS - 85%</li>
-          <li>JavaScript - 80%</li>
-          <li>React - 95%</li>
-          <li>Backend Development - 70%</li>
+          <li> Python</li>
+          <li> Pytorch, Scikit-learn, Pytorch geometrics</li>
+          <li> Machine and deep learning</li>
+          <li> Data visualisation</li>
+          <li> Data analysis </li>
+          <li> Deployment and DevOps tools</li>
         </ul>
         <div class="home__scroll">
             <a href="#portfolio" class="home__scroll-button button--flex">
@@ -187,9 +205,9 @@
                 <div class="portfolio__content grid swiper-slide">
                     <img src="assets/img/dataset_alignment.png" alt="" class="portfolio__img">
                     <div class="portfolio__data">
-                        <h3 class="portfolio__title"> Aligning medical cell datasets </h3>
+                        <h3 class="portfolio__title"> Domain shifts mitigation in medical cell datasets </h3>
                         <p class="portfolio__description">
-                            smth to describe the project
+                            <!-- smth to describe the project -->
                         </p>
                         <a href="#" class="btn button--flex button--small portfolio__button">
                             To the paper
@@ -205,7 +223,7 @@
                     <div class="portfolio__data">
                         <h3 class="portfolio__title"> CMI sensors | Kaggle competition</h3>
                         <p class="portfolio__description">
-                            smth to describe the project
+                            <!-- smth to describe the project -->
                         </p>
                         <a href="#" class="btn button--flex button--small portfolio__button">
                             <i class="uil uil-github" style="font-size: 1.25rem;"></i> 
@@ -221,7 +239,7 @@
                     <div class="portfolio__data">
                         <h3 class="portfolio__title"> AI and Quantum Computing</h3>
                         <p class="portfolio__description">
-                            smth to describe the project
+                            <!-- smth to describe the project -->
                         </p>
                         <a href="#" class="btn button--flex button--small portfolio__button">
                             To the paper
