--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                             129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                             -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
-                            <image class="home__blob-img" x="0" y="-30" href="assets/img/about.jpg"/>
+                            <image class="home__blob-img" x="0" y="-30" href="assets/img/about.png"/>
                         </g>
                     </svg>
                 <!-- <img src="assets/img/about.jpg" alt="Profile picture"> -->
@@ -136,25 +136,27 @@
       <div class="about__container container">
         <!-- <img src="assets/img/about.jpg" alt="About me picture"> -->
         <div class="about__content">
-            <p>
+            <p class="text-box">
                 Former physicist, with a PhD in theoretical physics and applied maths,
                 I'm transitioning towards the world of data. With a long experience 
                 in data analysis, modeling, machine and deep learning, I love to 
                 "give data a voice", to turn them into insights and interpret them.
             </p>
-            <p>
+            
+            <p class="text-box">
             I am convinced that artificial intelligence can help us make tremendous progress and improve human life. 
             There are already so many domains where AI has demonstrated its incredible potential 
             — one striking example being AlphaFold, which has revolutionized our understanding of protein structures. 
             Yet, we are still at the beginning of what AI can achieve.
             </p>
-            <p>
+            <p class="text-box">
             I am particularly fascinated by AI applications in healthcare, 
             pharmaceutical research, and oncology, where turning data into 
             meaningful insights can accelerate drug discovery, improve diagnosis, 
             and enable more personalized treatments. I am currently working at CRIION,
             a foundation focused on applying AI to cancer research. 
             </p>
+            </div>
             <div class="about__end">
             <a href="assets/files/CV_ISOARD.pdf" class="btn" target="_blank">Download CV</a>
             <div class="home__scroll">
@@ -164,16 +166,16 @@
                 <i class="uil uil-arrow-down home__scroll-arrow"> </i>
             </a>
             </div>
-            </div>
         </div>
+      </div>
+        <!-- </div>
          <img src="assets/img/header_image_v2.jpg" alt="">
-         </div>
+         </div> -->
     </section>
 
     <!-- SKILLS -->
     <section class="skills section" id="skills">
         <h2 class="section__title">Skills</h2>
-
       <div class="skills__container container">
         <ul>
           <li> Python</li>
@@ -196,7 +198,7 @@
 
     <!-- PORTFOLIO -->
     <section class="portfolio section" id="portfolio">
-        <h2 class="portfolio__container">Projects</h2>
+        <h2 class="section__title">Projects</h2>
         <span class="section__subtitle">Most recent works</span>
         <div class="portfolio__container container swiper swiper-container">
             <div class="swiper-wrapper">
