--- a/index.html
+++ b/index.html
@@ -136,26 +136,36 @@
       <div class="about__container container">
         <!-- <img src="assets/img/about.jpg" alt="About me picture"> -->
         <div class="about__content">
-            <p class="text-box">
+            <div class="text-box" id="about__text-1">
                 Former physicist, with a PhD in theoretical physics and applied maths,
                 I'm transitioning towards the world of data. With a long experience 
                 in data analysis, modeling, machine and deep learning, I love to 
-                "give data a voice", to turn them into insights and interpret them.
-            </p>
-            
-            <p class="text-box">
-            I am convinced that artificial intelligence can help us make tremendous progress and improve human life. 
-            There are already so many domains where AI has demonstrated its incredible potential 
-            — one striking example being AlphaFold, which has revolutionized our understanding of protein structures. 
-            Yet, we are still at the beginning of what AI can achieve.
-            </p>
-            <p class="text-box">
-            I am particularly fascinated by AI applications in healthcare, 
-            pharmaceutical research, and oncology, where turning data into 
-            meaningful insights can accelerate drug discovery, improve diagnosis, 
-            and enable more personalized treatments. I am currently working at CRIION,
-            a foundation focused on applying AI to cancer research. 
-            </p>
+                "give data a voice", explore patterns hidden from our eyes, and
+                transform them into intepretable and operational levers.
+            </div> 
+            <div class="text-box text2" id="about__text-2">
+                I am particularly fascinated by AI applications in healthcare, 
+                pharmaceutical research, and oncology, where turning data into 
+                meaningful insights can accelerate drug discovery, improve diagnosis, 
+                and enable more personalized treatments. I am convinced that 
+                artificial intelligence can help us make tremendous progress 
+                and improve human life.
+            </div>
+            <div class="text-box">
+                Over the years, I have developed a sharp ability to 
+                analyze and resolve complex problems. I have broadened my 
+                expertise to include machine learning, deep learning, and other 
+                advanced analytical tools. But, what matters the most is reasoning, 
+                a skill that extends much beyond physics and research and applies 
+                to any domain. 
+                <p class="about_last_word">
+                Data are everywhere.
+                </p>
+                <p class="about_last_word">
+                They just need us to unlock their 
+                secrets.
+                </p>
+            </div>
             </div>
             <div class="about__end">
             <a href="assets/files/CV_ISOARD.pdf" class="btn" target="_blank">Download CV</a>
